<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:background="@drawable/gradient_animation"
    android:clickable="true">

    <ImageView
        android:id="@+id/login_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:transitionName="logo_image"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_music_icon" />

    <TextView
        android:id="@+id/login_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:fontFamily="@font/cantata_one"
        android:text="@string/login_header"
        android:textSize="@dimen/dimen_40sp"
        android:textColor="@color/colorBlack"
        android:transitionName="logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_imageview" />

    <TextView
        android:id="@+id/siginin_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/signin_slogan"
        android:textSize="@dimen/dimen_18sp"
        android:transitionName="slogan_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_header_textview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_20dp"
        android:padding="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@id/siginin_textview">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_inputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="298dp"
            android:layout_margin="@dimen/dimen_4dp"
            android:transitionName="username_trans">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_textfield"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_inputlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="298dp"
            android:transitionName="password_trans"
            android:layout_margin="@dimen/dimen_4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_textfield"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_password_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="@dimen/dimen_8dp"
            android:text="@string/forget_password_button"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/sigin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_button"
            style="@style/LoginButton"
            android:transitionName="signin_button_trans"
            android:layout_margin="@dimen/dimen_16dp" />

        <Button
            android:id="@+id/new_user_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_8dp"
            android:background="#00000000"
            android:fontFamily="@font/abeezee"
            android:text="@string/new_user_sign_up_button"
            android:transitionName="login_button_trans"
            android:textColor="@color/colorBlack" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>